Fix empty torrent list content alignment

--- a/client/sass/components/_torrents.scss
+++ b/client/sass/components/_torrents.scss
@@ -64,6 +64,7 @@ $torrents-list--alert--foreground: rgba(#8899a8, 0.5);
       flex: 1 1 auto;
       flex-direction: column;
       height: 100%;
+      justify-content: center;
       list-style: none;
       opacity: 1;
       overflow: hidden;
